[tool.poetry]
name = "dcodex_bible"
version = "1.0.8"
description = "An extension for D-Codex to use biblical manuscripts."
authors = ["Robert Turnbull <robert.turnbull@unimelb.edu.au>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
dcodex = {git = "https://github.com/rbturnbull/dcodex.git"}

[tool.poetry.dev-dependencies]
coverage = "^5.5"

[build-system]
requires = ["setuptools >= 40.6.0", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
