[tool.poetry]
name = "dcodex_bible"
version = "1.0.8"
description = "An extension for dcodex to use biblical manuscripts."
authors = ["Robert Turnbull <robert.turnbull@unimelb.edu.au>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rbturnbull/dcodex_bible"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
dcodex = "^1.0.3"

[tool.poetry.dev-dependencies]
coverage = "^5.5"

[build-system]
requires = ["setuptools >= 40.6.0", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
