[tool.poetry]
name = "dcodex_bible"
version = "1.0.14"
description = "An extension for dcodex to use biblical manuscripts."
authors = ["Robert Turnbull <robert.turnbull@unimelb.edu.au>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rbturnbull/dcodex_bible"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
gotoh = {git = "https://github.com/rbturnbull/gotoh.git"}
dcodex = {git = "https://github.com/rbturnbull/dcodex.git", branch="dates"}
appdirs = ">=1.4.4"
rich = ">=12.2.0"

[tool.poetry.group.dev.dependencies]
coverage = ">=5.5"
black = ">=21.9b0"

[build-system]
requires = ["setuptools >= 40.6.0", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
